# 15666-grenade

./: .gitignore  CMakeLists.txt  Jamfile  Mesh.cpp  Mesh.hpp  ObserveMode.cpp  README.md  Scene.cpp  Scene.hpp  main.cpp  show-meshes.cpp  show-scene.cpp
scenes/: Makefile  car.blend  city.blend  export-meshes.py  grenade.blend
